syntax = "proto3";

package v2ray.core.app.policy;
option csharp_namespace = "V2Ray.Core.App.Policy";
option go_package = "policy";
option java_package = "com.v2ray.core.app.policy";
option java_multiple_files = true;

message Second {
  uint32 value = 1;
}

message Policy {
  // Timeout is a message for timeout settings in various stages, in seconds.
  message Timeout {
    Second handshake = 1;
    Second connection_idle = 2;
    Second uplink_only = 3;
    Second downlink_only = 4;
  }

  message Stats {
    bool user_uplink = 1;
    bool user_downlink = 2;
  }

  message Buffer {
    bool enabled = 1;
    uint32 size = 2;
  }

  Timeout timeout = 1;
  Stats stats = 2;
  Buffer buffer = 3;
}

message SystemPolicy {
  message Stats {
    bool inbound_uplink = 1;
    bool inbound_downlink = 2;
  }

  Stats stats = 1;
}

message Config {
  map<uint32, Policy> level = 1;
  SystemPolicy system = 2;
}
